--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,26 +8,31 @@
 #      Markdown formatted page while the second is generated using JSON.
 
 main:
-  - title: "Publications"
-    url: /publications/
+  # - title: "Talks"
+  #   url: /talks/    
 
-  - title: "Talks"
-    url: /talks/    
+  - title: "Home"
+    url: /home/    
+
+  - title: "Research"
+    url: /research/
 
   - title: "Teaching"
     url: /teaching/    
     
-  - title: "Portfolio"
-    url: /portfolio/
+  # - title: "Portfolio"
+  #   url: /portfolio/
+
+  - title: "CV"
+    url: /cv/
         
   - title: "Blog Posts"
     url: /year-archive/
-    
-  - title: "CV"
-    url: /cv/
-    
+
+  - title: "Contact"
+    url: /contact/
   # - title: "CV"
   #   url: /cv-json/
     
-  - title: "Guide"
-    url: /markdown/
+  # - title: "Guide"
+  #   url: /markdown/
