--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "yifnli/yifnli.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "Profile_Photo.jpg"
+  avatar           : "Profile_Photo2.jpg"
   name             : "Yifan Li"
   pronouns         : # example: "she/her"  
   bio              : "Economist & Statistician"
